fix: og-layout-child contentoverflow for childs with max-size

--- a/src/components/og-layout-child/og-layout-child.scss
+++ b/src/components/og-layout-child/og-layout-child.scss
@@ -24,3 +24,6 @@
     max-height: var(--og-layout-child--max-height);
 }
 
+:host[max-size] {
+    overflow: auto;
+}
